# FLEAT

./: README.md  pyproject.toml
fleat_project/: aggregator.py  config.py  controller.py  data.py  experiment.py  io_utils.py  main.py  models.py  partitioning.py  profiles.py  runtime.py  trainer.py  utils.py
scripts/: run_example.sh
